[package]
name = "sok"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sok"
path = "src/main.rs"

[dependencies]
cfg-if = "1"
winit = { version = "0.30" }
log = "0.4"
wgpu = "25.0"
pollster = "0.4"
parking_lot = "0.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wgpu = { version = "25.0"}
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
fern = "0.7"
web-sys = { version = "0.3.77", features = [
    "Document",
    "Window",
    "Element",
]}